--- a/fluid-slider.css
+++ b/fluid-slider.css
@@ -31,4 +31,9 @@
 
 .swipe-item img {
   width: 100%;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  -o-user-select: none;
+  user-select: none;   
 }
